# libgchart

./: .gitignore  Makefile.am  README.in  configure.ac  gchart.spec.in  libgchart-gtk3.pc.in  libgchart-gtk4.pc.in
docs/: Doxyfile.in  Makefile.am
examples/: Makefile.am  chart-gtk3.cpp  chart-gtk4.cpp  chart.c
gchart/: g_chart.c  g_chart.h
po/: Makevars  POTFILES.in  libgchart.pot  nl.gmo  nl.po
src/: Gchart.cpp  Gchart.hpp  GchartChart.cpp  GchartChart.hpp  GchartColor.hpp  GchartLabel.hpp  GchartMap.hpp  GchartMapBase.hpp  GchartPoint.hpp  GchartProvider.cpp  GchartProvider.hpp  Makefile.am  g_chart.c  g_chart.h  gchart-draw.c  gchart-draw.h  gchart-internal.h  gchart-text.c  gchart-text.h  gchart.c  gchart.xml  gchart_glade.cpp  gchart_glade.h  helper.hpp
